Fix facets collapse toggle alignment; fixes #1553

--- a/app/assets/stylesheets/blacklight/_facets.scss
+++ b/app/assets/stylesheets/blacklight/_facets.scss
@@ -1,5 +1,15 @@
+.top-panel-heading {
+  @extend .navbar-light;
+  @extend .clearfix;
+
+  .navbar-toggler {
+    float: right;
+  }
+}
+
 .facets-heading {
   @extend .h4;
+  line-height: inherit;
 }
 
 .facet-limit-active {
